# esp32_FreeRTOS_IOT_soilMoisture_monitor

./: README.md
components/u8g2/: CMakeLists.txt
main/: CMakeLists.txt  soil_moisture_sensor.c
